# HTTP-Web-Server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  my_config
cmake/: CodeCoverageReportConfig.cmake
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile  docker-compose.yml
docs/: another_page.md  index.md  inex.md
docs/subdir/: nested.md
include/: config_parser.h  crud_handler.h  echo_handler.h  file_system.h  handler_factory.h  handler_registry.h  logger.h  mock_file_system.h  real_file_system.h  request_handler.h  server.h  session.h  sleep_handler.h  static_handler.h
include/handlers/: health_handler.h  markdown_handler.h  not_found_handler.h  static_handler.h
src/: config_parser.cc  crud_handler.cc  echo_handler.cc  handler_factory.cc  handler_registry.cc  health_handler.cc  logger.cc  markdown_handler.cc  mock_file_system.cc  not_found_handler.cc  real_file_system.cc  request_handler.cc  server.cc  session.cc  static_handler.cc  webserver_main.cc
src/handlers/: crud_handler.cc  echo_handler.cc  health_handler.cc  markdown_handler.cc  not_found_handler.cc  static_handler.cc
static/: index.html
static/admin/: adminpage.html
static/api/v1/: docs.html
static/docs_assets/css/: docs.css
static/site/: index.html
templates/: md_wrapper.html
tests/: config_parser_test.cc  crud_handler_test.cc  extra_end_brace_config  handler_registry_test.cc  integration_test.sh  markdown_handler_test.cc  mock_file_system_test.cc  nested_config  nested_empty_config  request_handler_test.cc  server_test.cc  session_test.cc  statement_empty_config  webserver_test.cc
